--- a/styles/main.css
+++ b/styles/main.css
@@ -18,8 +18,11 @@
 body,
 html {
 	font-family: 'Inter', sans-serif;
-	background: url('/images/bg.jpg') no-repeat center center fixed;
+	background: linear-gradient(rgba(6, 5, 6, 0.8), rgba(59, 52, 52, 0.8)),
+		url('../images/bg.jpg');
 	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
 	margin: 0;
 	padding: 0;
 	width: 100vw;
